feat: add paginated search using Specification
